[tool.black]
line-length=88

[tool.poetry]
name = "hisensetv"
description = "MQTT interface to Hisense televisions."
authors = ["Alex Martens <alex@thinglab.org>"]
version = "0.3.0"
license = "MIT"
readme = "README.rst"
repository = "https://github.com/newAM/hisensetv"
homepage = "https://github.com/newAM/hisensetv"

[tool.poetry.dependencies]
python = "^3.7"

paho-mqtt = "^1.5"

[tool.poetry.dev-dependencies]
black = "22.1.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
pep8-naming = "^0.12.1"

[tool.poetry.scripts]
hisensetv = "hisensetv.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"
